# agentic-day1

./: README.md  app.py  pyproject.toml  requirements.txt
