[project]
name = "day1homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain-anthropic>=1.4.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "python-dotenv>=1.2.2",
]
